--- a/deployment/package.json
+++ b/deployment/package.json
@@ -12,6 +12,8 @@
   "type": "commonjs",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomicfoundation/hardhat-verify": "^2.1.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "hardhat": "^2.26.1"
   },
   "dependencies": {
